# uart-blink

./: .gitignore  CMakeLists.txt
include/: gpio.h  uart_blink.h
src/: CMakeLists.txt  FreeRTOSConfig.h  gpio.c  main.c  uart_blink.c
utils/: read_serial.py  write_serial.py
